--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 body{ background : #ffffff }
 .code { background : #000000 ; color : #1ae854 }
-h1 { font-size : 60px }
+h1 { font-size : 60px ; text-align : center }
 p { font-size : 40px }
