--- a/style.css
+++ b/style.css
@@ -2,3 +2,4 @@ body{ background : #ffffff }
 .code { background : #000000 ; color : #1ae854 }
 h1 { font-size : 60px ; text-align : center }
 p { font-size : 40px }
+.strong { color : red }
