--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{ background : #ffffff }
 .code { background : #000000 ; color : #1ae854 }
 h1 { font-size : 60px ; text-align : center }
+h2 { font-size : 55px ; text-align : center }
 p { font-size : 40px }
 .strong { color : red }
