--- a/style.css
+++ b/style.css
@@ -4,3 +4,4 @@ h1 { font-size : 60px ; text-align : center ; background : red}
 h2 { font-size : 55px ; text-align : center }
 p { font-size : 40px }
 .strong { color : red }
+a { font-size : 53px }
