--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{ background : #ffffff }
+body{ background : #ffd }
 .code { background : #000000 ; color : #1ae854 }
 h1 { font-size : 60px ; text-align : center ; background : red}
 h2 { font-size : 55px ; text-align : center }
