--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{ background : #ffd }
-.code { background : #000000 ; color : #1ae854 }
-h1 { font-size : 60px ; text-align : center ; background : red}
+.code { background : #000 ; color : #1ae854 }
+h1 { font-size : 60px ; text-align : center ; background : #1b70bf }
 h2 { font-size : 55px ; text-align : center }
 h3 { font-size : 50px ; text-align : center }
 p { font-size : 40px }
