--- a/style.css
+++ b/style.css
@@ -6,3 +6,4 @@ h3 { font-size : 50px ; text-align : center ; background : #b8cc06 }
 p { font-size : 40px }
 .strong { color : red }
 a { font-size : 53px }
+#table { backfround : #2d5da8 }
