--- a/style.css
+++ b/style.css
@@ -5,5 +5,5 @@ h2 { font-size : 55px ; text-align : center }
 h3 { font-size : 50px ; text-align : center ; background : #b8cc06 }
 p { font-size : 40px }
 .strong { color : red }
-a { font-size : 53px }
+a { font-size : 53px ; color : #00f }
 #table { background : #8ced05 }
