--- a/style.css
+++ b/style.css
@@ -7,3 +7,4 @@ p { font-size : 40px }
 .strong { color : red }
 a { font-size : 53px ; color : blue }
 #table { background : #8ced05 }
+li { font-size : 40px }
