--- a/style.css
+++ b/style.css
@@ -8,3 +8,4 @@ p { font-size : 40px }
 a { font-size : 53px ; color : blue }
 #table { background : #8ced05 }
 li { font-size : 40px }
+#to_center { text-align : center }
