--- a/style.css
+++ b/style.css
@@ -9,3 +9,21 @@ a { font-size : 40px ; color : blue }
 #table { background : #8ced05 }
 li { font-size : 40px }
 .to_center { text-align : center }
+table, td, th{
+  border: 1px solid #595959;
+  border-collapse: collapse;
+}
+td, th{
+  padding: 3px;
+  width: 30px;
+  height: 25px;
+}
+th {
+  background: #f0e6cc;
+}
+.even {
+  background: #fbf8f0;
+}
+.odd {
+  background: #fefcf9;
+}
